[package]
name = "cp-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "time", "process", "macros", "rt-multi-thread"] }
sys-mount = "1.5.1"
tempfile = "3.3.0"
libmount = "0.1.15"
clap = { version = "4.0.17", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
cgroups-fs = "1.1.3"
nix = "0.24.2"

[[bin]]
name = "sand"
path = "src/bin/sand.rs"
